--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-socket-io/socket.js"></script>
 
         <script src="bower_components/lodash/dist/lodash.js"></script>
         <!-- endbuild -->
@@ -54,5 +55,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
+
+    <script src="/socket.io/socket.io.js"></script>
+    
 </body>
 </html>
