--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,10 @@
 
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
         <!-- endbuild -->
 </head>
-  <body ng-app="dSioApp">
+  <body ng-app="blimpIO">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -25,8 +26,11 @@
       <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <!-- Content -->
     <div class="container" ng-view=""></div>
+
+    <!-- Toaster Content -->
+    <toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <!--<script>
@@ -46,7 +50,9 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-socket-io/socket.js"></script>
+        <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
 
         <script src="bower_components/lodash/dist/lodash.js"></script>
         <!-- endbuild -->
@@ -57,6 +63,6 @@
         <!-- endbuild -->
 
     <script src="/socket.io/socket.io.js"></script>
-    
+
 </body>
 </html>
