--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,10 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css(.tmp) styles/main.css -->
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
+
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
         <!-- endbuild -->
