[FEATURE] USERLOGIN - Passport-local + Bcrypt + MongoDB // Login Form // Angular+Express Routing

--- a/app/index.html
+++ b/app/index.html
@@ -57,13 +57,14 @@
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-socket-io/socket.js"></script>
         <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
-
+        <script src="scripts/components/http-auth-interceptor.js"></script>
         <script src="bower_components/lodash/dist/lodash.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/Login.js"></script>
         <!-- endbuild -->
 
     <script src="/socket.io/socket.io.js"></script>
