--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <![endif]-->
 
     <!-- Content -->
-    <div class="container" ng-view=""></div>
+    <div class="container" ui-view></div>
 
     <!-- Toaster Content -->
     <toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
@@ -55,10 +55,14 @@
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="bower_components/angular-socket-io/socket.js"></script>
         <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
         <script src="bower_components/lodash/dist/lodash.js"></script>
         <script src="scripts/components/http-auth-interceptor.js"></script>
+
+
+        <script src="scripts/modules/auth.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
