[Refactor] Modularisation -> 'main' route/state becomes 'index // Added 'main' module

--- a/app/index.html
+++ b/app/index.html
@@ -55,19 +55,18 @@
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
-        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="bower_components/angular-socket-io/socket.js"></script>
         <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
         <script src="bower_components/lodash/dist/lodash.js"></script>
-        <script src="scripts/components/http-auth-interceptor.js"></script>
 
+        <script src="components/http-auth-interceptor.js"></script>
+        <script src="components/angular-ui-router.js"></script>
 
-        <script src="scripts/modules/auth.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+        <script src="modules/main/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 
