--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="modules/main/main.js"></script>
+        <script src="modules/blimps/blimps.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 
