--- a/app/modules/main/main.html
+++ b/app/modules/main/main.html
@@ -5,7 +5,9 @@
     <li><a>Settings</a></li>
     <li><a ng-click="go('/logout')">Logout</a></li>
   </ul>
-  <h3 class="text-muted">blimpIO</h3>
+  <!--<h3 class="text-muted">blimpIO</h3>-->
+  <div class="logo side main">
+  </div>
 </div>
 
 <div class="jumbotron">
