--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -10,10 +10,10 @@
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
                         Sign in</button>
                     <label class="checkbox pull-left">
-                        <input type="checkbox" value="remember-me">
+                        <input type="checkbox" value="rememberme" ng-model="userdata.rememberme">
                         Remember me
                     </label>
-                    <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
+                    <a class="pull-right need-help" href="mailto:mail@d-s.io">Need help?</a><span class="clearfix"></span>
                 </form>
             </div>
         </div>
