[Feature] User Management // [Refactor]  server.js / event-namespacing // [Styling] Toaster bottom right / removed notification option

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     <div class="container" ui-view></div>
 
     <!-- Toaster Content -->
-    <toaster-container toaster-options="{'time-out': 3000}"></toaster-container>
+    <toaster-container toaster-options="{'time-out': 3000, 'position-class': 'toast-bottom-right'}"></toaster-container>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <!--<script>
@@ -69,6 +69,7 @@
         <script src="modules/login/login.js"></script>
         <script src="modules/main/main.js"></script>
         <script src="modules/blimps/blimps.js"></script>
+        <script src="modules/users/users.js"></script>
         <!-- endbuild -->
 
     <script src="/socket.io/socket.io.js"></script>
