--- a/app/modules/main/main.html
+++ b/app/modules/main/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>blimpIO</h1>
+  <h1>Hi<span ng-if="current.user != null"> {{ current.user.username }}</span>! </h1>
   <p class="lead">Managin' blimps!</p>
   <p><a class="btn btn-lg btn-success btn3d" ng-click="repopulate()">Repopulate Collection!</a></p>
 </div>
