--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -5,8 +5,8 @@
                 <div class="form-signin-logo logo">
                 </div>
                 <form class="form-signin" ng-submit="login()">
-                    <input type="text" name="username" ng-model="userdata.username" class="form-control" placeholder="blimp" required autofocus>
-                    <input type="password" name="password" ng-model="userdata.password" class="form-control" placeholder="blimp" required>
+                    <input type="text" name="username" ng-model="userdata.username" class="form-control" placeholder="Username" required autofocus>
+                    <input type="password" name="password" ng-model="userdata.password" class="form-control" placeholder="Password" required>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
                         Sign in</button>
                     <label class="checkbox pull-left">
