--- a/app/modules/users/users.html
+++ b/app/modules/users/users.html
@@ -1,7 +1,7 @@
 <div class="row" ng-show="!$state.includes('index.users.add')" >
 
     <div class="col-lg-12">
-        <button type="button" ng-click="$state.go('index.users.add')" class="btn">New User</button>
+        <button type="button" ng-click="$state.go('index.users.add')" class="btn btn-grey">New User</button>
     </div>
 </div>
 <form ng-submit="createUser()">
