[Refactor] White Space Formatting

--- a/app/modules/main/main.html
+++ b/app/modules/main/main.html
@@ -1,19 +1,19 @@
 <div class="jumbotron">
-  <h1>Hi<span ng-if="current.user != null"> {{ current.user.username }}</span>! </h1>
-  <p class="lead">Managin' blimps!</p>
-  <p><a class="btn btn-lg btn-success btn3d" ng-click="repopulate()">Repopulate Collection!</a></p>
+    <h1>Hi<span ng-if="current.user != null"> {{ current.user.username }}</span>!</h1>
+    <p class="lead">Managin' blimps!</p>
+    <p><a class="btn btn-lg btn-success" ng-click="repopulate()">Repopulate Collection!</a></p>
 </div>
 
 <div class="row marketing">
-  <div ng-repeat="thing in awesomeThings track by $index">
-      <h4>{{thing.name}} ( {{thing._id}} )
-          <a ng-click="deleteAwesomeThing(thing._id)" class="btn btn-large btn-default btn-error btn3d pull-right ">
-              <i class="glyphicon glyphicon-trash"></i>
-          </a>
-      </h4>
+    <div ng-repeat="thing in awesomeThings track by $index">
+        <h4>{{thing.name}} ( {{thing._id}} )
+            <a ng-click="deleteAwesomeThing(thing._id)" class="btn btn-large btn-default btn-error pull-right ">
+                <i class="glyphicon glyphicon-trash"></i>
+            </a>
+        </h4>
       <p>{{thing.info}}</p>
-  </div>
-  <div ng-if="!awesomeThings || awesomeThings.length == 0">
-      <i>Nothing to show. Press Repopulate!</i>
-  </div>
+    </div>
+    <div ng-if="!awesomeThings || awesomeThings.length == 0">
+        <i>Nothing to show. Press Repopulate!</i>
+    </div>
 </div>
