--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -5,15 +5,27 @@
                 <div class="form-signin-logo logo">
                 </div>
                 <form class="form-signin" ng-submit="login()">
-                    <input type="text" name="username" ng-model="userdata.username" class="form-control" placeholder="Username" required autofocus>
-                    <input type="password" name="password" ng-model="userdata.password" class="form-control" placeholder="Password" required>
+
+                    <input type="text" class="form-control"
+                        name="username" placeholder="Username" required autofocus
+                        ng-model="userdata.username" >
+
+                    <input type="password" class="form-control"
+                        name="password" placeholder="Password" required
+                        ng-model="userdata.password" >
+
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
-                        Sign in</button>
+                        Sign in
+                    </button>
+
                     <label class="checkbox pull-left">
                         <input type="checkbox" value="rememberme" ng-model="userdata.rememberme">
                         Remember me
                     </label>
-                    <a class="pull-right need-help" href="mailto:mail@d-s.io">Need help?</a><span class="clearfix"></span>
+                    <a class="pull-right need-help" href="mailto:mail@d-s.io">
+                        Need help?
+                    </a>
+                    <span class="clearfix"></span>
                 </form>
             </div>
         </div>
