--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,10 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.csss">
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
 
-    <!-- build:css(.tmp) styles/main.css -->
+    <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
@@ -40,41 +40,30 @@
     <!-- Toaster Content -->
     <toaster-container toaster-options="{'time-out': 3000, 'position-class': 'toast-bottom-right'}"></toaster-container>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <!--<script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            <!-- build:js({.tmp,app}) scripts/scripts.js -->
+            <script src="bower_components/angular/angular.js"></script>
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>-->
+            <script src="bower_components/angular-resource/angular-resource.js"></script>
+            <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+            <script src="bower_components/angular-animate/angular-animate.js"></script>
 
+            <script src="bower_components/angular-socket-io/socket.js"></script>
+            <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
 
-    <script src="bower_components/angular/angular.min.js"></script>
+            <script src="components/http-auth-interceptor.js"></script>
+            <script src="components/angular-ui-router.js"></script>
 
-        <!-- build:js scripts/modules.js -->
-        <script src="bower_components/angular-resource/angular-resource.js"></script>
-        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-        <script src="bower_components/angular-route/angular-route.js"></script>
-        <script src="bower_components/angular-animate/angular-animate.js"></script>
-        <script src="bower_components/angular-socket-io/socket.js"></script>
-        <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
-        <script src="bower_components/lodash/dist/lodash.js"></script>
-
-        <script src="components/http-auth-interceptor.js"></script>
-        <script src="components/angular-ui-router.js"></script>
-        <!-- endbuild -->
-
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="app.js"></script>
-        <script src="modules/index/index.js"></script>
-        <script src="modules/login/login.js"></script>
-        <script src="modules/main/main.js"></script>
-        <script src="modules/blimps/blimps.js"></script>
-        <script src="modules/users/users.js"></script>
-        <!-- endbuild -->
+            <script src="bower_components/lodash/dist/lodash.js"></script>
+            <script src="bower_components/restangular/dist/restangular.js"></script>
+            
+            <script src="app.js"></script>
+            <script src="modules/index/index.js"></script>
+            <script src="modules/login/login.js"></script>
+            <script src="modules/main/main.js"></script>
+            <script src="modules/blimps/blimps.js"></script>
+            <script src="modules/blimps/dashboard/dashboard.js"></script>
+            <script src="modules/users/users.js"></script>
+            <!-- endbuild -->
 
     <script src="/socket.io/socket.io.js"></script>
 
