--- a/app/modules/blimps/blimps.html
+++ b/app/modules/blimps/blimps.html
@@ -1,22 +1,29 @@
-<div class="row" >
+<div class="row marketing" >
     <div class="col-lg-12">
-        <button type="button" ng-click="createBlimp()" class="btn btn-grey">New Blimp</button>
+        <h1>Blimps</h1>
+        <br>
+        <button type="button" ng-click="createBlimp()" class="btn btn-grey">
+            <span class="glyphicon glyphicon-plus clickable"></span> Create New Blimp
+        </button>
+        <button type="button" class="btn btn-grey"><strike><span class="glyphicon glyphicon-stats clickable"></span> View All Logs</strike></button>
     </div>
 </div>
 <div class="row marketing">
     <div class="col-lg-12">
         <i ng-if="!blimps">No Blimps yet.</i>
         <div class="row">
-            <div class="col-lg-6" ng-repeat="blimp in blimps | orderBy:'name' track by $index">
+            <div class="col-lg-6 blimp-container" ng-repeat="blimp in blimps | orderBy:'name' track by $index">
                 <h2 >{{ blimp.name }}</h2>
-                <b> API Key</b>
-                <input type="text"  class="form-control" value="{{ blimp.apikey }}">
+                
+                <label for="blimpApiKey_{{ blimp.name }}"><b> API Key</b></label>
+                <input type="text" name="blimpApiKey_{{ blimp.name }}" class="form-control" value="{{ blimp.apikey }}">
                 <br>
-                <br>
+                <button class="btn btn-grey" ui-sref='index.blimp-dashboard({ blimpName: blimp.name })'>
+                    Dashboard <span class="glyphicon glyphicon-dashboard clickable"></span>
+                </button>
                 <button class="btn btn-grey" ng-click="deleteBlimp(blimp._id)">
                     Delete <span class="glyphicon glyphicon-trash clickable"></span>
                 </button>
-                <br><br><br>
             </div>
     </div>
 </div>
