--- a/app/modules/users/users.html
+++ b/app/modules/users/users.html
@@ -1,26 +1,33 @@
-<div class="row" ng-show="!$state.includes('index.users.add')" >
-
+<div class="row marketing">
     <div class="col-lg-12">
-        <button type="button" ng-click="$state.go('index.users.add')" class="btn btn-grey">New User</button>
+        <h1>Users</h1>
+        <br>
+        <div class="row">
+            <div class="col-lg-12" ng-show="!$state.includes('index.users.add')" >
+                <button type="button" ng-click="$state.go('index.users.add')" class="btn btn-grey">
+                        <span class="glyphicon glyphicon-plus clickable"></span> Create New User
+                    </button>
+                </div>
+            </div>
+            <form ng-submit="createUser()" ng-show="$state.includes('index.users.add')">
+                    <div class="col-lg-3">
+                        <input type="text" placeholder="Username" class="form-control testBox" ng-model="newUser.username">
+                    </div>
+                    <div class="col-lg-3">
+                        <input type="password" placeholder="Password" class="form-control testBox" ng-model="newUser.password">
+                    </div>
+                    <div class="col-lg-3">
+                        <input type="email" placeholder="Email" class="form-control testBox" ng-model="newUser.email">
+                    </div>
+                    <div class="col-lg-3">
+                        <button type="submit" class="btn btn-success btn-block">Create! </button>
+                        <button type="submit" class="btn btn-danger btn-block" ng-click="$state.go('index.users')">Cancel </button>
+                    </div>
+            </form>
+        </div>
     </div>
 </div>
-<form ng-submit="createUser()">
-    <div class="row" ng-show="$state.includes('index.users.add')">
-        <div class="col-lg-3">
-            <input type="text" placeholder="Username" class="form-control testBox" ng-model="newUser.username">
-        </div>
-        <div class="col-lg-3">
-            <input type="password" placeholder="Password" class="form-control testBox" ng-model="newUser.password">
-        </div>
-        <div class="col-lg-3">
-            <input type="email" placeholder="Email" class="form-control testBox" ng-model="newUser.email">
-        </div>
-        <div class="col-lg-3">
-            <button type="submit" class="btn btn-success btn-block">Create! </button>
-        </div>
-    </div>
-</form>
-<div class="row">
+<div class="row marketing">
     <div class="col-lg-12">
         <br>
         <table class="table">
