--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
 
     <!-- build:css({.tmp,app}) styles/main.css -->
+    <link rel="stylesheet" href="components/highlightjs/monokai_sublime.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
@@ -55,6 +56,10 @@
 
             <script src="bower_components/lodash/dist/lodash.js"></script>
             <script src="bower_components/restangular/dist/restangular.js"></script>
+            
+
+            <script src="components/highlightjs/highlight.min.js"></script>
+            <script src="bower_components/angular-highlightjs/angular-highlightjs.min.js"></script>
             
             <script src="app.js"></script>
             <script src="modules/index/index.js"></script>
