--- a/app/modules/blimps/dashboard/dashboard.html
+++ b/app/modules/blimps/dashboard/dashboard.html
@@ -24,9 +24,11 @@
 </div>
 <div class="row marketing">
     <div class="col-lg-12">
-        <b>Reports</b>
+        <b>Reports</b><br><br>
         <div ng-repeat="report in reports | orderBy:'-timestamp' track by $index">
-            {{ report.timestamp * 1000 | date:'HH:mm:ss / dd.MM.yyyy ' }} - {{ report.ip }} @ {{ report.host }} - <pre>{{ report.raw }}</pre>
+            <b>{{ report.timestamp * 1000 | date:'HH:mm:ss / dd.MM.yyyy ' }}</b> - {{ report.ips || report.ip }} @ {{ report.host }} - {{ }}
+            <br>
+            <div hljs source="reports[$index].json | json"></div>
         </div>
     </div>
 </div>
