[Feature] ReturnPath added / Users get redirected to their original destination after login

--- a/app/modules/main/main.html
+++ b/app/modules/main/main.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <h1>Hi<span ng-if="current.user != null"> {{ current.user.username }}</span>!</h1>
     <p class="lead">Managin' blimps!</p>
-    <p><a class="btn btn-lg btn-success" ng-click="repopulate()">Repopulate Collection!</a></p>
+    <p><a class="btn btn-lg btn-success" ng-click="repopulate()">Repopulate Test Collection!</a></p>
 </div>
 
 <div class="row marketing">
