--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.csss">
+    <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
 
     <!-- build:css({.tmp,app}) styles/main.css -->
