[Styling] Updated footer & login view with github reference and a shameless personal plug

--- a/app/modules/index/index-view.html
+++ b/app/modules/index/index-view.html
@@ -15,5 +15,5 @@
 </ui-view>
 
 <div class="footer">
-  <p>DS ♥</p>
+  <p><a href="http://davidsimon.ch" class="text-muted">DS</a> | <a href="https://github.com/d-simon/blimp-io" class="text-muted">On GitHub</a></p>
 </div>
