--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -28,6 +28,7 @@
                     <span class="clearfix"></span>
                 </form>
             </div>
+            <p class="text-center"><br><a href="http://davidsimon.ch" class="text-muted">DS</a> | <a href="https://github.com/d-simon/blimp-io" class="text-muted">On GitHub</a></p>
         </div>
     </div>
 </div>
