[Fix] use report.json instead of basing it on  $index which is different from the actual reports array index

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
             
 
             <script src="components/highlightjs/highlight.min.js"></script>
-            <script src="bower_components/angular-highlightjs/angular-highlightjs.min.js"></script>
+            <script src="bower_components/angular-highlightjs/angular-highlightjs.js"></script>
             
             <script src="app.js"></script>
             <script src="modules/index/index.js"></script>
