--- a/app/modules/index/index-view.html
+++ b/app/modules/index/index-view.html
@@ -1,12 +1,11 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li ui-sref="index.main" ng-class="{ active: $state.includes('index.main') }"><a>Dashboard</a></li>
+    <li ui-sref="index.dashboard" ng-class="{ active: $state.includes('index.dashboard') }"><a>Dashboard</a></li>
     <li ui-sref="index.blimps" ng-class="{ active: $state.includes('index.blimps') }"><a>Blimps</a></li>
-    <li><a>Settings</a></li>
+    <!--<li><a>Settings</a></li>-->
     <li ui-sref="index.users" ng-class="{ active: $state.includes('index.users') }"><a>Users</a></li>
     <li><a ng-click="go('/logout')">Logout</a></li>
   </ul>
-  <!--<h3 class="text-muted">blimpIO</h3>-->
   <div class="logo side main">
   </div>
 </div>
