[Styling] Adjusted Login Styling + Reponsive

--- a/app/modules/login/login.html
+++ b/app/modules/login/login.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+        <div class="col-sm-6 col-sm-offset-3">
             <div class="account-wall">
                 <div class="form-signin-logo logo">
                 </div>
@@ -14,7 +14,7 @@
                         name="password" placeholder="Password" required
                         ng-model="userdata.password" >
 
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">
+                    <button class="btn btn-lg btn-grey btn-block" type="submit">
                         Sign in
                     </button>
 
@@ -28,7 +28,7 @@
                     <span class="clearfix"></span>
                 </form>
             </div>
-            <p class="text-center"><br><a href="http://davidsimon.ch" class="text-muted">DS</a> | <a href="https://github.com/d-simon/blimp-io" class="text-muted">On GitHub</a></p>
+            <p class="text-center"><br><a href="https://github.com/d-simon/blimp-io" class="text-muted"><i>blimp-io</i> on GitHub</a></p>
         </div>
     </div>
 </div>
