[Feature] Graph with HighCharts (live updating / temperature only)  // [Refactor] Modules - States

--- a/app/modules/index/index-view.html
+++ b/app/modules/index/index-view.html
@@ -14,7 +14,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ui-sref="index.dashboard" ng-class="{ active: $state.includes('index.dashboard') }"><a>Dashboard</a></li>
-                <li ui-sref="index.blimps" ng-class="{ active: $state.includes('index.blimps') }"><a>Blimps</a></li>
+                <li ui-sref="index.blimps.list" ng-class="{ active: $state.includes('index.blimps') }"><a>Blimps</a></li>
                 <li><a>Settings</a></li>
                 <li ui-sref="index.users" ng-class="{ active: $state.includes('index.users') }"><a>Users</a></li>
                 <li><a ng-click="go('/logout')">Logout</a></li>
