--- a/app/modules/blimps/overview/overview.html
+++ b/app/modules/blimps/overview/overview.html
@@ -1,6 +1,6 @@
 <div class="row marketing">
     <div class="col-sm-12">
-        <h1><a ui-sref="index.blimps" class="text-decor-none">Blimps</a> / {{ blimp.name }}</h1>
+        <h1><a ui-sref="index.blimps.list" class="text-decor-none">Blimps</a> / {{ blimp.name }}</h1>
         <br>
 
     </div>
@@ -13,7 +13,7 @@
         <input type="text" name="blimpApiKey" class="form-control" value="{{ blimp.apikey }}">
     </div>
     <div class="col-sm-6">
-        <label for="o"><b>Operations</b>
+        <label><b>Operations</b>
         </label>
         <br>
         <button class="btn btn-grey">
@@ -31,12 +31,23 @@
 </div>
 <div class="row marketing">
     <div class="col-lg-12">
-        <b>Reports</b><br><br>
-        <div ng-repeat="report in reports | orderBy:'-timestamp' track by $index">
-            <b>{{ report.timestamp * 1000 | date:'HH:mm:ss / dd.MM.yyyy ' }}</b> - {{ report.ips || report.ip }} @ {{ report.host }} - {{ }}
-            <br>
-            <div hljs source="report.json | json"></div>
-        </div>
+        <label><b>Display</b>
+        </label>
+        <br>
+         <button class="btn btn-grey" ng-class="{ active: $state.includes('index.blimps.overview.reports') }" ui-sref="index.blimps.overview.reports({ blimpName: blimp.name })">
+            Reports
+            <span class="glyphicon glyphicon-tasks clickable"></span>
+        </button>
+        <button class="btn btn-grey" ng-class="{ active: $state.includes('index.blimps.overview.graph') }" ui-sref="index.blimps.overview.graph({ blimpName: blimp.name })">
+            Graph
+            <span class="glyphicon glyphicon-stats clickable"></span>
+        </button>
+        <button class="btn btn-grey" ng-class="{ active: $state.includes('index.blimps.overview.table') }" ui-sref="index.blimps.overview.reports({ blimpName: blimp.name })">
+            <strike>Table</strike>
+            <span class="glyphicon glyphicon-list-alt clickable"></span>
+        </button>
+        <br><br>
+        <div ui-view></div>
     </div>
 </div>
 
