--- a/app/modules/users/users.html
+++ b/app/modules/users/users.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col-sm-3">
                         <button type="submit" class="btn btn-success btn-block">Create! </button>
-                        <button type="submit" class="btn btn-danger btn-block" ng-click="$state.go('index.users')">Cancel </button>
+                        <button class="btn btn-danger btn-block" ng-click="$state.go('index.users')">Cancel </button>
                     </div>
             </form>
         </div>
