--- a/app/modules/blimps/overview/overview.html
+++ b/app/modules/blimps/overview/overview.html
@@ -13,31 +13,44 @@
         <input type="text" name="blimpApiKey" class="form-control" value="{{ blimp.apikey }}">
     </div>
     <div class="col-sm-6">
-        <label><b>Operations</b>
-        </label>
-        <br>
-        <button class="btn btn-grey">
-            <strike>Regenerate Key</strike>
-            <span class="glyphicon glyphicon-refresh clickable"></span>
-        </button>
-
-        <button class="btn btn-grey" ng-click="deleteBlimp(blimp._id)">
-            Delete Blimp
-            <span class="glyphicon glyphicon-trash clickable"></span>
-        </button>
-        <br>
+       
+        <div ng-switch on="viewState">
+            <div ng-switch-when="rename">
+                <label><b>Rename</b>
+                </label>
+                <br>
+                <input type="text" class="form-control" ng-model="blimp.name" /><br>
+                <button class="btn btn-grey" ng-click="rename.save();switchViewState('default')">
+                    Save
+                    <span class="glyphicon glyphicon-ok clickable"></span>
+                </button>
+                <button class="btn btn-grey" ng-click="rename.cancel();switchViewState('default')">
+                    Cancel
+                    <span class="glyphicon glyphicon-remove clickable"></span>
+                </button>
+            </div>
+            <div ng-switch-default>
+                <label><b>Operations</b>
+                </label>
+                <br>
+                <button class="btn btn-grey" ng-click="switchViewState('rename')">
+                    Rename
+                    <span class="glyphicon glyphicon-pencil clickable"></span>
+                </button>
+                <button class="btn btn-grey" ng-click="deleteBlimp(blimp._id)">
+                    Delete
+                    <span class="glyphicon glyphicon-trash clickable"></span>
+                </button>
+            </div>
+        </div>
         <br>
     </div>
 </div>
 <div class="row marketing">
-    <div class="col-lg-12">
+    <div class="col-sm-12">
         <label><b>Display</b>
         </label>
         <br>
-         <button class="btn btn-grey" ng-class="{ active: $state.includes('index.blimps.overview.reports') }" ui-sref="index.blimps.overview.reports({ blimpName: blimp.name })">
-            Reports
-            <span class="glyphicon glyphicon-tasks clickable"></span>
-        </button>
         <button class="btn btn-grey" ng-class="{ active: $state.includes('index.blimps.overview.graph') }" ui-sref="index.blimps.overview.graph({ blimpName: blimp.name })">
             Graph
             <span class="glyphicon glyphicon-stats clickable"></span>
@@ -46,8 +59,11 @@
             <strike>Table</strike>
             <span class="glyphicon glyphicon-list-alt clickable"></span>
         </button>
+         <button class="btn btn-grey" ng-class="{ active: $state.includes('index.blimps.overview.reports') }" ui-sref="index.blimps.overview.reports({ blimpName: blimp.name })">
+            Reports
+            <span class="glyphicon glyphicon-tasks clickable"></span>
+        </button>
         <br><br>
         <div ui-view></div>
     </div>
 </div>
-
