--- a/app/modules/users/users.html
+++ b/app/modules/users/users.html
@@ -20,8 +20,8 @@
                         <input type="email" placeholder="Email" class="form-control testBox" ng-model="newUser.email">
                     </div>
                     <div class="col-sm-3">
-                        <button type="submit" class="btn btn-success btn-block">Create! </button>
-                        <button class="btn btn-danger btn-block" ng-click="$state.go('index.users')">Cancel </button>
+                        <button type="submit" class="btn btn-success btn-block">Add  <span class="glyphicon glyphicon-ok"></span></button>
+                        <button type="reset" class="btn btn-danger btn-block" ng-click="$state.go('index.users')">Cancel <span class="glyphicon glyphicon-remove"></span></button>
                     </div>
             </form>
         </div>
