--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>blimpI/O</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0,  maximum-scale=1.0">
+
     
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
