[Refactor] switched to data factories for each resource // [Refactor] Data is now resolved and injected in all controllers // [Fix] returnPath

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,6 @@
     
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
-    
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="components/highlightjs/monokai_sublime.min.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -76,6 +75,11 @@
     <script src="modules/blimps/overview/overview.js"></script>
     <script src="modules/blimps/overview/graph/graph.js"></script>
     <script src="modules/users/users.js"></script>
+    <script src="modules/services/services.js"></script>
+    <script src="modules/services/data/users.js"></script>
+    <script src="modules/services/data/blimps.js"></script>
+    <script src="modules/services/data/reports.js"></script>
+    <script src="modules/services/data/auth.js"></script>
     <!-- endbuild -->
 
     <script src="/socket.io/socket.io.js"></script>
